feat: add canvas confetti package
fix: high risk dependencies

--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "^10.0.1",
+    "canvas-confetti": "^1.5.1",
+    "next": "^12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
+    "@types/canvas-confetti": "^1.4.2",
     "@types/node": "17.0.8",
     "@types/react": "17.0.38",
     "@types/styled-components": "^5.1.20",
